# dashboard

./: SQLQuery1.sql  pyproject.toml
dashboard-fron-end/: package-lock.json  package.json
dashboard-fron-end/app/: page.tsx
dashboard-fron-end/app/api/: config.ts
dashboard-fron-end/app/api/galleries/: route.ts
dashboard-fron-end/app/api/main-groups/: route.ts
dashboard-fron-end/app/api/product/: route.ts
dashboard-fron-end/app/api/sales/: route.ts
dashboard-fron-end/app/api/stores/: route.ts
dashboard-fron-end/app/api/supplier-report/: route.ts
dashboard-fron-end/app/api/suppliers/: route.ts
dashboard-fron-end/app/api/users/: route.ts
dashboard-fron-end/app/home/: page.tsx
dashboard-fron-end/app/product/: page.tsx
dashboard-fron-end/app/sales/: page.tsx
dashboard-fron-end/app/supplier-report/: page.tsx
dashboard-fron-end/app/utils/: index.ts
dashboard-fron-end/components/: Loading.tsx  MultiSelect.tsx  ProductTable.tsx  SalesDashboard.tsx  SummaryCard.tsx
dashboard-fron-end/types/: sales.ts
dashboard_project/dashboard_project/: settings.py  urls.py
dashboard_project/sales_api/: filters.py  models.py  serializers.py  urls.py  views.py
